# Flover

./: CMakeLists.txt  README.md
OSU-Nowlab/Flover/: README.md
OSU-Nowlab/Flover/ghrs-data/: forks.csv  stargazers.csv  views_clones_aggregate.csv
OSU-Nowlab/Flover/latest-report/: report.html  report.md  report_for_pdf.html
bp/: gptj_preprocessing.cc  gptj_preprocessing.h
examples/cpp/bert/: bert_example.cc  bert_triton_example.cc
examples/cpp/bert_fp8/: bert_fp8_example.cc  bert_fp8_example_squad.cc
examples/cpp/bert_int8/: bert_int8_example.cc
examples/cpp/decoding/: decoding_example.cc  layernorm_test.cc
examples/cpp/gpt/: gpt_example.cc
examples/cpp/gpt_fp8/: gpt_config.ini  gpt_fp8_example.cc  gpt_fp8_triton_example.cc
examples/cpp/gptj/: gptj_config.ini  gptj_example.cc  gptj_triton_example.cc
flover_runtime/: CMakeLists.txt  test_flover.cc
src/: CMakeLists.txt
src/flover/: CMakeLists.txt
src/flover/models/flover/: CMakeLists.txt  Flover.cc  Flover.h
src/flover/models/flover/buffers/: gptj_buffers.h  llama_buffers.h
src/flover/models/flover/configs/: gptj_config.ini  llama_config.ini
tests/gemm_dequantize/: th_gemm_dequantize.cc  th_gemm_dequantize.py
tests/int8_gemm/: int8_gemm_test.cu
tests/moe/: th_moe_ops.cc  th_moe_unit_tests.py
tests/unittests/: gtest_utils.h  test_activation.cu  test_attention_kernels.cu  test_context_decoder_layer.cu  test_gemm.cu  test_gpt_kernels.cu  test_int8.cu  test_logprob_kernels.cu  test_penalty_kernels.cu  test_sampling.cu  test_sampling_kernels.cu  test_sampling_layer.cu  test_tensor.cu  unittest_utils.h
tests/weight_only_quant_ops/: th_weight_quant_ops_unit_tests.py
(+1325 files in other folders)
